# swiss-energy-analytics

./: .gitignore  README.md  dataset_insights.ipynb  main.py  prefect.yaml  profiles.yml  pyproject.toml
dbt/models/: dbt_project.yaml
dbt/models/staging/: schema.yaml  stg_electricity_gen.sql
dbt/staging/: schema.yaml
flows/: gcs_to_bq_flow.py  main_flow.py  utils.py  web_to_gcp.py  web_to_gcp_flow.py
flows/data/: electricity_consumption.parquet  electricity_generation.parquet
