[project]
name = "swiss-energy-analytics"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-auth>=2.55.1",
    "google-cloud-bigquery>=3.42.1",
    "google-cloud-storage>=3.12.0",
    "pandas>=2.2.0",
    "pandas-gbq>=0.35.0",
    "prefect>=3.7.6",
    "prefect-gcp>=0.6.20",
    "pyarrow>=24.0.0",
    "requests>=2.34.2",
    "tqdm>=4.68.3",
]
